Added Text and Reformated Page
Format and text changes (replaced my placeholder text)

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
+                    <li>
+                      <a href="https://www.linkedin.com/in/bailey-strum-14b502120">LinkedIn</a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/Rickmolt3">GitHub</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -73,29 +79,39 @@
             <h2 class="featurette-heading">Outdoor Enthusiast, Expert Tinkerer, Profesional Stack Overflower
                 <span class="text-muted">if this is what you want hire me.</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">I have been self-taught programming for around 5 years now. I wrote my first Python script back in 2011 and have been hooked ever since. I have a good deal of experience in the core Front-End languages such as Html, CSS, and Javascript and have worked with Bootstrap, Jquery, LESS, and SASS on a few occasions.</p>
+            <p class="lead">While I enjoy the Front-End and all of its workings, my real passion is Back-End Development. During the Fall of 2016 I enrolled and began the Back-End Development Course at <em>'The Iron Yard'</em> coding bootcamp. I am currently taking a gap year from College and postponing pursuing a College Degree to get my feet wet in the industry. With the skills I learn from the course, in addition to the skills I have learned on my own I hope to land a Junior Dev Position or Internship in the coming months.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">The Second Heading
-                <span class="text-muted">Is Pretty Cool Too.</span>
+
+            <h2 class="featurette-heading">Front//Back End Languages I use
+                <span class="text-muted">and Services//Applications I love</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead"><bold>Front End:</bold> HTML, CSS, JavaScript, JQuery, SASS, LESS</p>
+            <p class="lead"><bold>Front End Services:</bold> Atom, GitHub, PostMan, JSFiddle</p>
+            <p class="lead"><bold>Back End:</bold> C#, ASP.NET MVC, SQL, JQuery, Razor</p>
+            <p class="lead"><bold>Back End Services:</bold> Visual Studio, SSMS(SQL Server Management Studio), GitHub</p>
+            <p class="lead"><bold>General Services:</bold> Slack, Trello, Asana, GitHub, WireShark</p>
+
+
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">The Third Heading
-                <span class="text-muted">Will Seal the Deal.</span>
+            <h2 class="featurette-heading">Send Me Some Questions
+                <span class="text-muted">Or Just Message Me For Fun.</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Email: Bstrum22198@gmail.com</p>
+            <p class="lead">Slack: Bstrum22198</p>
+            <p class="lead">I linked my LinkedIn and GitHub in the NavBar Section!</p>
+
+
         </div>
 
         <hr class="featurette-divider">
