--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h2 class="featurette-heading">Front//Back End Languages I use
                 <span class="text-muted">and Services//Applications I love</span>
             </h2>
-            <p class="lead"><bold>Front End:</bold> HTML, CSS, JavaScript, JQuery, SASS, LESS</p>
+            <p class="lead"><bold>Front End:</bold> HTML, CSS, JavaScript, JQuery, SASS, LESS, Bootstrap</p>
             <p class="lead"><bold>Front End Services:</bold> Atom, GitHub, PostMan, JSFiddle</p>
             <p class="lead"><bold>Back End:</bold> C#, ASP.NET MVC, SQL, JQuery, Razor</p>
             <p class="lead"><bold>Back End Services:</bold> Visual Studio, SSMS(SQL Server Management Studio), GitHub</p>
