--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     <li>
                       <a href="https://github.com/Rickmolt3">GitHub</a>
                     </li>
+                    <li>
+                      <a href="https://www.meetup.com/DallasNETUG/">Dallas .NET User Group!</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
