--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
         <div class="featurette" id="about">
             <img class="featurette-image img-circle img-responsive pull-right" src="images/profile.jpg">
             <h2 class="featurette-heading">Outdoor Enthusiast, Expert Tinkerer, Profesional Stack Overflower
-                <span class="text-muted">if this is what you want hire me.</span>
+                <span class="text-muted">If you want a motivated, smart, personable developer, I am your guy</span>
             </h2>
-            <p class="lead">I have been self-taught programming for around 5 years now. I wrote my first Python script back in 2011 and have been hooked ever since. I have a good deal of experience in the core Front-End languages such as Html, CSS, and Javascript and have worked with Bootstrap, Jquery, LESS, and SASS on a few occasions.</p>
-            <p class="lead">While I enjoy the Front-End and all of its workings, my real passion is Back-End Development. During the Fall of 2016 I enrolled and began the Back-End Development Course at <em>'The Iron Yard'</em> coding bootcamp. I am currently taking a gap year from College and postponing pursuing a College Degree to get my feet wet in the industry. With the skills I learn from the course, in addition to the skills I have learned on my own I hope to land a Junior Dev Position or Internship in the coming months.</p>
+            <p class="lead">Since the age of 13, I have immersed myself in world of programming. When I wrote my first Python script at this young age, I was hooked.  My passion has led me to learn languages on my own. As my skills have grown, I have built a portfolio reflecting a variety of skills. I have experience in core Front-End languages such as Html, CSS, and Javascript. I have also worked with Bootstrap, Jquery, LESS, and SASS.</p>
+            <p class="lead">While I enjoy the details and mechanics of the Front-End, my real passion is Back-End Development. In the Fall of 2016, I enrolled at <em>'The Iron Yard'</em> coding school to study Back End Development. I am eager to build upon my experience and training and get my feet wet in the industry. My goal is to enter the industry as a Junior Developer.</p>
         </div>
 
         <hr class="featurette-divider">
