--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <!-- First Featurette -->
         <div class="featurette" id="about">
             <img class="featurette-image img-circle img-responsive pull-right" src="images/profile.jpg">
-            <h2 class="featurette-heading">Outdoor Enthusiast, Expert Tinkerer, Professional Stack Overflower
-                <span class="text-muted">If you want a motivated, smart, personable developer, I am your guy</span>
+            <h2 class="featurette-heading">Outdoor Enthusiast, Expert Tinkerer, Professional Stack Overflower...
+                <span class="text-muted">If you want a motivated, smart, personable developer, I am your guy.</span>
             </h2>
             <p class="lead">Since the age of 13, I have immersed myself in world of programming. When I wrote my first Python script at this young age, I was hooked.  My passion has led me to learn languages on my own. As my skills have grown, I have built a portfolio reflecting a variety of skills. I have experience in core Front-End languages such as Html, CSS, and Javascript. I have also worked with Bootstrap, Jquery, LESS, and SASS.</p>
             <p class="lead">While I enjoy the details and mechanics of the Front-End, my real passion is Back-End Development. In the Fall of 2016, I enrolled at <em>'The Iron Yard'</em> coding school to study Back End Development. I am eager to build upon my experience and training and get my feet wet in the industry. My goal is to enter the industry as a Junior Developer.</p>
