--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <header class="header-image">
         <div class="headline">
             <div class="container">
-                <h1>Web // Backend Developer</h1>
+                <h1>Web / Backend Developer</h1>
             </div>
         </div>
     </header>
