--- a/index.html
+++ b/index.html
@@ -37,16 +37,6 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                  <!--  <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#services">Experience</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                  -->
                     <li>
                       <a href="https://www.linkedin.com/in/bailey-strum-14b502120">LinkedIn</a>
                     </li>
@@ -67,7 +57,7 @@
     <header class="header-image">
         <div class="headline">
             <div class="container">
-                <h1>Web // Backend Developer</h1>
+                <h1>Junior C, C++ Developer</h1>
             </div>
         </div>
     </header>
@@ -95,11 +85,11 @@
             <h2 class="featurette-heading">Front//Back End Languages I use
                 <span class="text-muted">and Services//Applications I love</span>
             </h2>
-            <p class="lead"><bold>Front End:</bold> HTML, CSS, JavaScript, JQuery, SASS, LESS, Bootstrap</p>
+            <p class="lead"><bold>Front End:</bold> HTML, CSS, JavaScript, JQuery, Bootstrap</p>
             <p class="lead"><bold>Front End Services:</bold> Atom, GitHub, PostMan, JSFiddle</p>
-            <p class="lead"><bold>Back End:</bold> C#, ASP.NET MVC, SQL, JQuery, Razor</p>
-            <p class="lead"><bold>Back End Services:</bold> Visual Studio, SSMS(SQL Server Management Studio), GitHub</p>
-            <p class="lead"><bold>General Services:</bold> Slack, Trello, Asana, GitHub, WireShark</p>
+            <p class="lead"><bold>Back End:</bold> C#, ASP.NET MVC, Microsoft SQL</p>
+            <p class="lead"><bold>Back End Services:</bold> Visual Studio, SSMS(SQL Server Management Studio)</p>
+            <p class="lead"><bold>General Services:</bold> Trello, Asana, GitHub, </p>
 
 
         </div>
@@ -112,7 +102,7 @@
                 <span class="text-muted">Or Just Message Me For Fun.</span>
             </h2>
             <p class="lead">Email: Bstrum22198@gmail.com</p>
-            <p class="lead">Slack: Bstrum22198</p>
+            <p class="lead">School Email: baileystrum@my.unt.edu</p>
             <p class="lead">I linked my LinkedIn and GitHub in the NavBar Section!</p>
 
 
@@ -125,7 +115,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>If you are reading this turn around.</p>
-                    <p>Bailey Strum &copy 2016</p>
+                    <p>Bailey Strum &copy 2019</p>
                 </div>
             </div>
         </footer>
