Some Changes for fun.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,17 +13,16 @@
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- MY CSS -->
+    <!-- MY CSS//Dont need anymore but leave for later use -->
     <link href="css/baileyresume.css" rel="stylesheet">
-
 </head>
 
 <body>
 
-    <!-- Navigation -->
+    <!-- Main navbar-->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
+            <!-- for mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -34,7 +32,6 @@
                 </button>
                 <a class="navbar-brand" href="#">Bailey Strum</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
@@ -54,7 +51,7 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Full Width Image Header -->
+    <!-- Full Width // Image of mountains -->
     <header class="header-image">
         <div class="headline">
             <div class="container">
@@ -63,12 +60,10 @@
         </div>
     </header>
 
-    <!-- Page Content -->
+    <!-- ACTUAL CONTENT BELOW -->
     <div class="container">
-
         <hr class="featurette-divider">
-
-        <!-- First Featurette -->
+        <!-- FIRST TEXT BLOCK AND PICTURE -->
         <div class="featurette" id="about">
             <img class="img-circle img-responsive pull-right" src="images/headshot.jpeg" alt="Work Headshot" style="height: 30%; width: 30%;">
             <h2 class="featurette-heading">Hello and welcome to my resume website! My name is Bailey Strum and I am an aspiring C and C++ Developer.
@@ -80,7 +75,7 @@
 
         <hr class="featurette-divider">
 
-        <!-- Second Featurette -->
+        <!-- SKILL SECTION -->
         <div class="featurette" id="services">
             
             
@@ -105,23 +100,19 @@
 
         <hr class="featurette-divider">
 
-        <!-- Third Featurette -->
+        <!-- Contact stuff -->
         <div class="featurette" id="contact">
             <h2 class="featurette-heading">Contact Information: </h2>
             <p class="lead">Email: Bstrum22198@gmail.com</p>
             <p class="lead">School Email: baileystrum@my.unt.edu</p>
             <p class="lead">I linked my LinkedIn and GitHub in the NavBar Section!</p>
-
-
         </div>
-
         <hr class="featurette-divider">
 
         <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>If you are reading this turn around.</p>
                     <p id="date"></p>
                     <script>
                         n =  new Date();
